fix(backend): resolve build errors in user and message services, optimize chat info enrichment