@@ -1,4 +1,4 @@
-package ru.kubsu.borshchevyk.user.infrastructure.adapter.`in`.grpc;
+package ru.kubsu.borshchevyk.user.infrastructure.adapter.in.grpc;
 
 import io.grpc.stub.StreamObserver;
 import lombok.RequiredArgsConstructor;
@@ -6,8 +6,13 @@ import net.devh.boot.grpc.server.service.GrpcService;
 import ru.kubsu.borshchevyk.grpc.UserRequest;
 import ru.kubsu.borshchevyk.grpc.UserResponse;
 import ru.kubsu.borshchevyk.grpc.UserServiceGrpc;
-import ru.kubsu.borshchevyk.user.application.port.`in`.GetUserProfileUseCase;
+import ru.kubsu.borshchevyk.user.application.port.in.GetUserProfileUseCase;
+import ru.kubsu.borshchevyk.user.application.dto.command.GetUserProfileCommand;
 import ru.kubsu.borshchevyk.user.domain.model.user.User;
+
+import java.util.UUID;
+import java.util.List;
+import java.util.stream.Collectors;
 
 @GrpcService
 @RequiredArgsConstructor
@@ -15,15 +20,17 @@ public class UserGrpcService extends UserServiceGrpc.UserServiceImplBase {
 
     private final GetUserProfileUseCase getUserProfileUseCase;
 
-    private final ru.kubsu.borshchevyk.user.application.port.`in`.GetUsersBatchUseCase getUsersBatchUseCase;
+    private final ru.kubsu.borshchevyk.user.application.port.in.GetUsersBatchUseCase getUsersBatchUseCase;
 
     @Override
     public void getUserInfo(UserRequest request, StreamObserver<UserResponse> responseObserver) {
         try {
-            User user = getUserProfileUseCase.getUserProfile(request.getUserId());
+            User user = getUserProfileUseCase.getUserProfile(GetUserProfileCommand.builder()
+                    .targetUserIdOrTag(request.getUserId())
+                    .build());
             
             UserResponse response = UserResponse.newBuilder()
-                    .setUserId(user.getUserId().value().toString())
+                    .setUserId(user.getUserId().getValue().toString())
                     .setFirstName(user.getFirstName())
                     .setLastName(user.getLastName() != null ? user.getLastName() : "")
                     .setTag(user.getTag().getValue())
@@ -42,11 +49,11 @@ public class UserGrpcService extends UserServiceGrpc.UserServiceImplBase {
     @Override
     public void getUsersBatch(ru.kubsu.borshchevyk.grpc.UsersBatchRequest request, StreamObserver<ru.kubsu.borshchevyk.grpc.UsersBatchResponse> responseObserver) {
         try {
-            java.util.List<java.util.UUID> uuids = request.getUserIdsList().stream()
-                    .map(java.util.UUID::fromString)
+            List<UUID> uuids = request.getUserIdsList().stream()
+                    .map(UUID::fromString)
                     .toList();
             
-            java.util.List<User> users = getUsersBatchUseCase.getUsersBatch(
+            List<User> users = getUsersBatchUseCase.getUsersBatch(
                     ru.kubsu.borshchevyk.user.application.dto.command.GetUsersBatchCommand.builder()
                             .userIds(uuids)
                             .build()
@@ -55,13 +62,13 @@ public class UserGrpcService extends UserServiceGrpc.UserServiceImplBase {
             ru.kubsu.borshchevyk.grpc.UsersBatchResponse response = ru.kubsu.borshchevyk.grpc.UsersBatchResponse.newBuilder()
                     .addAllUsers(users.stream()
                             .map(user -> UserResponse.newBuilder()
-                                    .setUserId(user.getUserId().value().toString())
+                                    .setUserId(user.getUserId().getValue().toString())
                                     .setFirstName(user.getFirstName())
                                     .setLastName(user.getLastName() != null ? user.getLastName() : "")
                                     .setTag(user.getTag().getValue())
                                     .setAvatarUrl(user.getAvatarUrl() != null ? user.getAvatarUrl() : "")
                                     .build())
-                            .toList())
+                            .collect(Collectors.toList()))
                     .build();
 
             responseObserver.onNext(response);
